--- a/style/style.css
+++ b/style/style.css
@@ -24,8 +24,11 @@ body {
 }
 *:focus {
   outline-color: var(--brand-color);
-  outline-offset: 20px;
-  border: 3px solid red;
+  outline-offset: 0;
+  outline-style: solid;
+  outline-width: 1px;
+  border: none;
+  border-radius: 0.2%;
 }
 
 .list {
@@ -59,13 +62,14 @@ body {
 .header-wrapper {
   padding-top: 24px;
   padding-bottom: 24px;
-  padding-left: 1.25%;
+  padding-left: 15px;
   padding-right: 2.25%;
   margin: auto;
   justify-content: space-between;
 }
 .header-left {
-  flex-basis: 496px;
+  flex-basis: 492px;
+  justify-content: space-between;
 }
 
 .logo {
@@ -75,7 +79,7 @@ body {
   color: #000;
   line-height: 1.19em;
   display: inline-block;
-  margin-right: 18.75%;
+  margin-right: 12px;
 }
 .logo-blue {
   color: var(--brand-color);
@@ -123,6 +127,7 @@ body {
 }
 .actually-page {
   position: relative;
+  margin-top: 4px;
 }
 .actually-page::after {
   content: "";
@@ -132,7 +137,7 @@ body {
   border-radius: 2px;
   display: block;
   position: relative;
-  top: 30px;
+  top: 28px;
 }
 
 .header-contacts a {
@@ -183,8 +188,9 @@ body {
 }
 .main-button {
   background-color: var(--brand-color);
-  border: 0;
   color: var(--contrast-color);
+  border: 0;
+  border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
   letter-spacing: 0.06em;
@@ -192,7 +198,7 @@ body {
   padding: 10px 42px;
   cursor: pointer;
   line-height: 1.875em;
-  border-radius: 4px;
+  justify-self: center;
 }
 .text-panel {
   margin: auto;
@@ -545,8 +551,6 @@ body {
 }
 .icon-close-bnt {
   position: absolute;
-  display: flex;
-  justify-content: center;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -554,4 +558,60 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   cursor: pointer;
+}
+
+.modal__heading {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--strong-color);
+  margin-bottom: 0.75rem;
+}
+
+.modal__formicon {
+  fill: var(--strong-color);
+  position: absolute;
+  top: 30px;
+  left: 15px;
+  cursor: text;
+}
+.modal__input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  margin-top: 2px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 40px;
+}
+.modal__input:focus {
+  border-color: var(--brand-color);
+  outline: 0;
+  padding-left: 42px;
+}
+.modal__label:has(.modal__input:focus) .modal__formicon {
+  fill: var(--brand-color);
+}
+
+.modal__input-comment {
+  height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
+.modal__input-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+.modal__label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--weak-color);
+  position: relative;
 }
