--- a/style/style.css
+++ b/style/style.css
@@ -183,7 +183,6 @@ body {
   font-weight: 900;
   line-height: 1.5em;
   letter-spacing: 0.06em;
-  margin-bottom: 20px;
   max-width: 696px;
 }
 .main-button {
@@ -199,6 +198,7 @@ body {
   cursor: pointer;
   line-height: 1.875em;
   justify-self: center;
+  margin-top: 30px;
 }
 .text-panel {
   margin: auto;
@@ -548,6 +548,9 @@ body {
   transition: transform 0.5s;
   transition-timing-function: cubic-bezier(0.71, 1.51, 0.4, 2);
   padding: 40px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 .icon-close-bnt {
   position: absolute;
@@ -576,6 +579,8 @@ body {
   top: 30px;
   left: 15px;
   cursor: text;
+  transition: fill 0.25s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__input {
   width: 100%;
@@ -585,6 +590,8 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
+  transition: border-color 0.25s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal__input:focus {
   border-color: var(--brand-color);
@@ -606,6 +613,7 @@ body {
   line-height: 14px;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
+  margin-bottom: 20px;
 }
 .modal__label {
   font-weight: 400;
@@ -614,4 +622,25 @@ body {
   letter-spacing: 0.01em;
   color: var(--weak-color);
   position: relative;
+}
+.modal__checkbox {
+  width: 15px;
+  height: 15px;
+  position: relative;
+  top: 3px;
+}
+.modal__checkbox:checked {
+  outline: 0;
+  color: green;
+}
+.modal__terms {
+  color: var(--weak-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 146%;
+  letter-spacing: 0.03em;
+}
+.modal__terms a {
+  color: var(--brand-color);
+  text-decoration: dotted;
 }
