--- a/style/style.css
+++ b/style/style.css
@@ -581,6 +581,7 @@ body {
   cursor: text;
   transition: fill 0.25s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 5;
 }
 .modal__input {
   width: 100%;
@@ -622,6 +623,7 @@ body {
   letter-spacing: 0.01em;
   color: var(--weak-color);
   position: relative;
+  display: block;
 }
 .modal__checkbox {
   width: 15px;
