--- a/style/style.css
+++ b/style/style.css
@@ -360,7 +360,13 @@ body {
   color: var(--contrast-color);
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-left: 1.25%;
+  padding-left: 15px;
+}
+.flex-footer {
+  justify-content: flex-start;
+  gap: 70px;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 .footer-standard a {
   color: var(--contrast-color);
@@ -386,15 +392,14 @@ body {
   font-size: 14px;
 }
 .footer-wrapper {
-  margin-left: 1.25%;
   display: inline-block;
 }
 .join-to-us {
   display: inline-block;
-  margin-left: 70px;
   margin-top: 12px;
 }
-.join-to-us h5 {
+.join-to-us h5,
+.newsletter__heading {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -418,6 +423,37 @@ body {
 .footer-socials_border:hover,
 .footer-socials_border:focus {
   background-color: var(--brand-color);
+}
+.newsletter__input {
+  padding: 15px;
+  background-color: inherit;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  width: 358px;
+}
+.newsletter__input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  height: 50px;
+}
+.newsletter__button {
+  margin: 0;
+  display: inline-flex;
+  align-items: center;
+  height: 50px;
+  padding: 0;
+  padding-left: 42px;
+  padding-right: 28px;
+}
+.newsletter__icon {
+  fill: var(--contrast-color);
+  margin-left: 24px;
 }
 /*PORTFOLIO PAGE*/
 
@@ -512,6 +548,10 @@ body {
   line-height: 2em;
   color: var(--weak-color);
 }
+.newsletter {
+  display: inline-block;
+  margin-top: 12px;
+}
 
 /* modal */
 .backdrop {
@@ -573,7 +613,7 @@ body {
   margin-bottom: 0.75rem;
 }
 
-.modal__formicon {
+.modal__icon {
   fill: var(--strong-color);
   position: absolute;
   top: 30px;
@@ -587,7 +627,7 @@ body {
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
-  margin-top: 2px;
+  margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 40px;
@@ -599,7 +639,7 @@ body {
   outline: 0;
   padding-left: 42px;
 }
-.modal__label:has(.modal__input:focus) .modal__formicon {
+.modal__label:has(.modal__input:focus) .modal__icon {
   fill: var(--brand-color);
 }
 
